syntax = "proto3";

package arend.compiled;
option java_package = "org.arend.module.serialization";
option java_outer_classname = "DefinitionProtos";

import "Expression.proto";
import "Level.proto";


message Definition {
    oneof definition_data {
        ClassData class = 5;
        DataData data = 6;
        FunctionData function = 7;
        DConstructorData constructor = 10;
    }
    bool hasTypeClassReference = 8;
    bool hasUniverses = 9;

    message Clause {
        repeated Pattern pattern = 1;
        Expression expression = 2;
    }

    message Pattern {
        oneof kind {
            Binding binding = 4;
            Constructor constructor = 7;
            Empty empty = 6;
        }

        message Binding {
            SingleParameter var = 1;
        }
        message Constructor {
            Expression expression = 6;
            repeated Pattern pattern = 3;
        }
        message Empty {
        }
    }

    message ClassifyingFields {
        repeated int32 field_ref = 1;
    }
    message ClassData {
        repeated int32 super_class_ref = 4;
        repeated Field personal_field = 10;
        repeated int32 field_ref = 8;
        map<int32, Expression> implementations = 12;
        int32 coercing_field_ref = 11;
        Sort sort = 7;
        bool is_record = 13;
        CoerceData coerce_data = 14;
        repeated int32 good_field = 16;
        repeated int32 type_class_field = 17;
        FieldOrder typechecking_field_order = 18;
        repeated ClassParametersLevel parameters_level = 19;

        message FieldOrder {
            repeated int32 field = 1;
        }
        message Field {
            Referable referable = 1;
            Expression type = 3;
            Expression type_level = 8;
            bool hasTypeClassReference = 4;
            bool isExplicit = 5;
            bool isParameter = 6;
            bool isProperty = 7;
            bool isHideable = 9;
            bool isCovariant = 10;
            bool hasUniverses = 11;
        }
    }
    message ParametersLevel {
        bool hasParameters = 1;
        repeated Telescope parameter = 2;
        int32 level = 3;
    }
    message ClassParametersLevel {
        ParametersLevel parameters_level = 1;
        repeated int32 field = 2;
    }
    message DataData {
        repeated Telescope param = 1;
        repeated int32 parameters_typechecking_order = 2;
        repeated bool good_this_parameters = 3;
        repeated TypeClassParameterKind type_class_parameters = 4;
        Sort sort = 5;
        repeated Constructor constructor = 6;
        bool matches_on_interval = 7;
        bool is_truncated = 8;
        bool is_squashed = 9;
        repeated bool covariant_parameter = 10;
        CoerceData coerce_data = 11;
        repeated ParametersLevel parameters_levels = 12;

        message Constructor {
            Referable referable = 1;
            repeated Pattern pattern = 2;
            repeated Telescope param = 3;
            repeated int32 parameters_typechecking_order = 7;
            repeated bool good_this_parameters = 8;
            repeated TypeClassParameterKind type_class_parameters = 10;
            repeated Clause clause = 4;
            Body conditions = 5;
            int32 number_of_interval_parameters = 6;
        }
    }
    message FunctionData {
        repeated Telescope param = 1;
        repeated int32 parameters_typechecking_order = 2;
        repeated bool good_this_parameters = 3;
        repeated TypeClassParameterKind type_class_parameters = 4;
        Expression type = 5;
        Expression type_level = 6;
        Body body = 7;
        FunctionKind kind = 8;
        int32 visible_parameter = 9;
        repeated ParametersLevel parameters_levels = 10;
    }
    message DConstructorData {
        FunctionData function = 1;
        int32 number_of_parameters = 2;
        Pattern pattern = 3;
    }

    enum FunctionKind {
        FUNC = 0;
        SFUNC = 1;
        LEMMA = 2;
    }

    enum TypeClassParameterKind {
        YES = 0;
        NO = 1;
        ONLY_LOCAL = 3;
    }

    message CoerceData {
        message Element {
            int32 classifying_def = 1;
            repeated int32 coercing_def = 2;
        }
        repeated Element coerce_from = 1;
        repeated Element coerce_to = 2;
    }
}

message Referable {
    string name = 1;
    Precedence precedence = 2;
    int32 index = 4;
}

message Precedence {
    Assoc assoc = 1;
    int32 priority = 2;
    bool infix = 3;

    enum Assoc {
        LEFT = 0;
        RIGHT = 1;
        NON_ASSOC = 2;
    }
}

message Body {
    oneof kind {
        ElimTree elim_tree = 1;
        IntervalElim interval_elim = 2;
        Expression expression = 3;
    }

    message ExpressionPair {
        Expression left = 1;
        Expression right = 2;
    }
    message IntervalElim {
        repeated ExpressionPair case = 1;
        ElimTree otherwise = 2;
    }
}
